<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:importantForAutofill="yes"
            android:autofillHints="name"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/inputNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nombre_usuario"
            android:inputType="text"
            android:importantForAutofill="yes"
            android:autofillHints="username"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/inputCorreo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"
            android:autofillHints="emailAddress"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/inputPais"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/pais"
            android:inputType="textCapWords"
            android:importantForAutofill="yes"
            android:autofillHints="postalAddress"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/inputContrasena"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:autofillHints="password"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>
</ScrollView>
