<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp"
    tools:ignore="NestedScrolling,ImageContrastCheck,TextContrastCheck,Autofill">

    <!-- Barra superior -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/btn_volver_busqueda"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_media_previous"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_volver"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_Registrar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_new"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/registrar_categoria_musical"/>

    </LinearLayout>

    <!-- Título  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorias_musicales"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <!-- Contenedor de resultados -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/categorias_musicales"
        tools:ignore="NestedScrolling,SpeakableTextPresent">

        <LinearLayout
            android:id="@+id/ll_resultados"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>